# compresto

./: Cargo.toml  LICENSE  README.md
src/: decoder.rs  discard.rs  encoder.rs  main.rs
src/codec/: brotli.rs  copy.rs  lz4.rs  lzav.rs  lzma.rs  mod.rs  snappy.rs  zstd.rs
