[package]
name = "compresto"
description = "A command-line tool to benchmark various compression algorithms"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/pkolaczk/compresto.git"
keywords = ["compression", "lz4", "zstd", "snappy", "brotli"]
categories = ["command-line-utilities", "encoding"]

[dependencies]
anyhow = "1.0.90"
brotlic = "0.8.2"
clap = { version = "4", features = ["derive"] }
lz4 = "1.28.0"
snap = "1.1.1"
zstd = { version = "0.13", features = ["experimental"] }
