[package]
name = "compresto"
description = "A command-line tool to benchmark various compression algorithms"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pkolaczk/compresto.git"
keywords = ["compression", "lz4", "zstd", "snappy", "brotli"]
categories = ["command-line-utilities", "encoding"]

[dependencies]
anyhow = "1.0.90"
brotlic-sys = "0.2.2"
byteorder = "1.5.0"
clap = { version = "4", features = ["derive"] }
lz4 = "1.28.0"
lzav = "0.1.0"
lzma-sys = "0.1.20"
snap = "1.1.1"
xz2 = "0.1.7"
zstd = { version = "0.13", features = ["experimental"] }
